// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initHTTPTransaction httpTransaction should fail on timeout 1`] = `
{
  "apmCalls": [],
  "delayClearCalls": [],
  "delayCreateCalls": [
    [
      30000,
    ],
  ],
  "logCalls": [
    [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": [],
  "obfuscateSensibleHeadersCalls": [
    [
      {
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": [],
  "request": {
    "body": {
      "connection": {
        "encrypted": true,
      },
      "headers": {
        "x-forwarded-for": "127.0.0.1",
      },
      "ip": "127.0.0.1",
      "method": "GET",
      "socket": {
        "bytesRead": 16,
        "bytesWritten": 64,
      },
      "ts": 1000000,
      "url": "/v1/users/1?extended=true",
    },
    "headers": {
      "x-forwarded-for": "127.0.0.1",
    },
    "method": "get",
    "url": "/v1/users/1?extended=true",
  },
  "timeCalls": [
    [],
  ],
  "uniqueIdCalls": [
    [],
  ],
}
`;

exports[`initHTTPTransaction httpTransaction should fail with non-unique transaction id 1`] = `
{
  "delayClearCalls": [],
  "delayCreateCalls": [
    [
      30000,
    ],
  ],
  "logCalls": [
    [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": [],
  "obfuscateSensibleHeadersCalls": [
    [
      {
        "transaction-id": "lol",
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": [],
  "timeCalls": [
    [],
  ],
  "uniqueIdCalls": [
    [],
  ],
}
`;

exports[`initHTTPTransaction httpTransaction should work 1`] = `
{
  "apmCalls": [
    [
      "CALL",
      {
        "endInBytes": 16,
        "endOutBytes": 64,
        "endTime": 1326585600000,
        "errored": false,
        "id": "[id]",
        "ip": "127.0.0.1",
        "method": "GET",
        "operationId": "theOperationId",
        "protocol": "http",
        "reqHeaders": undefined,
        "resHeaders": {
          "Content-Type": "application/json",
        },
        "startInBytes": 16,
        "startOutBytes": 64,
        "startTime": 1326585600000,
        "statusCode": 200,
        "url": "/v1/users/1?extended=true",
      },
    ],
  ],
  "buildResponseCalls": [
    [],
  ],
  "delayClearCalls": [
    [
      Promise {},
    ],
  ],
  "delayCreateCalls": [
    [
      30000,
    ],
  ],
  "logCalls": [
    [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": [],
  "obfuscateSensibleHeadersCalls": [
    [
      {
        "x-forwarded-for": "127.0.0.1",
      },
    ],
  ],
  "obfuscateSensiblePropsCalls": [],
  "request": {
    "body": {
      "connection": {
        "encrypted": true,
      },
      "headers": {
        "x-forwarded-for": "127.0.0.1",
      },
      "ip": "127.0.0.1",
      "method": "GET",
      "socket": {
        "bytesRead": 16,
        "bytesWritten": 64,
      },
      "ts": 1000000,
      "url": "/v1/users/1?extended=true",
    },
    "headers": {
      "x-forwarded-for": "127.0.0.1",
    },
    "method": "get",
    "url": "/v1/users/1?extended=true",
  },
  "timeCalls": [
    [],
    [],
  ],
  "uniqueIdCalls": [
    [],
  ],
}
`;

exports[`initHTTPTransaction should work 1`] = `
{
  "apmCalls": [],
  "delayClearCalls": [],
  "delayCreateCalls": [],
  "logCalls": [
    [
      "debug",
      "💱 - HTTP Transaction initialized.",
    ],
  ],
  "obfuscateCalls": [],
  "obfuscateSensibleHeadersCalls": [],
  "obfuscateSensiblePropsCalls": [],
  "timeCalls": [],
  "uniqueIdCalls": [],
}
`;
